# MB-VAE-DTI

./: .gitignore  CODEBASE_REPORT.md  README.md  environment.yml  hpc.pbs  pyproject.toml  requirements.txt  setup.py  setup_env.sh  test_h5torch_fix.py  wget-log
docs/: full_model_architecture.md  model_architecture_guide.md
mb_vae_dti/: __init__.py
mb_vae_dti/archive/: embed_loader.py
mb_vae_dti/loading/: __init__.py  annotation.py  datasets.py  drug_annotation.py  drugs.py  load_pretrain_drugs.py  load_pretrain_targets.py  target_annotation.py  test.ipynb  visualization.py
mb_vae_dti/processing/: __init__.py  cap_drugs_h5torch.py  embed_helper.py  embed_loader.py  embedding.py  embedding_old.py  example_embeddings.py  factory.py  graph_properties.py  h5datasets.py  h5factory copy.py  h5factory.py  split.py  test.ipynb
mb_vae_dti/training/: README.md  __init__.py  data_containers.py  job.pbs  job_grid.pbs  job_submit.sh  run.py  test.py
notebooks/: analysis.ipynb  classification.ipynb  data.ipynb  data_classification.ipynb  dti_results.md  grid_analysis.ipynb  loading copy.ipynb  loading.ipynb  loading_pretrain.ipynb  models.ipynb  processing.ipynb  resolve.py  smiles-data.txt  test_pairwise_distance.ipynb  training.ipynb  training_validating.ipynb
scripts/: README.md  embedding.sh  get_data.py  h5torch_creation.py  hpc.pbs  molecular_statistics.py  run.py  run_model.py  utils.txt
utils/: data.py  dataLoading.py  dataProcessing.py  embeddingOld.py  model.py  modelBuilding.py  modelBuilding_new.py  modelTraining.py  preEmbedding.py  training.py
(+98 files in other folders)
